force-app/main/default/objects/ReportOutput__c/ReportOutput__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>帳票出力機能</label>
</CustomObject>