force-app/main/default/objects/ReportOutput__c/fields/certificationId__c.field-meta.xml
<CustomField>
    <fullName>certificationId__c</fullName>
    <label>認証ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>