force-app/main/default/objects/ReportOutput__c/fields/certificationPass__c.field-meta.xml
<CustomField>
    <fullName>certificationPass__c</fullName>
    <label>認証PASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>