force-app/main/default/objects/ReportOutput__c/fields/cid__c.field-meta.xml
<CustomField>
    <fullName>cid__c</fullName>
    <label>cid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>