force-app/main/default/objects/ReportOutput__c/fields/ExecutionPath__c.field-meta.xml
<CustomField>
    <fullName>ExecutionPath__c</fullName>
    <label>実行パス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>