force-app/main/default/objects/ReportOutput__c/fields/sid__c.field-meta.xml
<CustomField>
    <fullName>sid__c</fullName>
    <label>sid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>